[package]
name = "ws-bridge"
version = "0.1.0"
authors = ["emliunix <emliunix@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.8.1"
mio = "0.6.19"
tokio = "0.1.21"
tokio-reactor = "0.1.9"
tokio-tcp = "0.1.3"
tokio-udp = "0.1.3"
tokio-timer = "0.2.11"
tokio-codec = "0.1.1"
bytes = "0.4.12"
futures = "0.1.28"
httparse = "1.3.4"
http = "0.1.18"
hyper = "0.12.33"
base64 = "0.10.1"
rust-crypto = "^0.2"
